[gd_scene load_steps=30 format=3 uid="uid://cp6q0kwkmd886"]

[ext_resource type="Script" uid="uid://bfnrjl1k57lvh" path="res://scenes/scratch.gd" id="1_mbcf5"]
[ext_resource type="PackedScene" uid="uid://c20p5ssbao33o" path="res://scenes/inventory_grid.tscn" id="1_ufdn1"]
[ext_resource type="Resource" uid="uid://1wbw7tkt8wno" path="res://entities/person/resources/chunk.tres" id="2_eikx3"]
[ext_resource type="PackedScene" uid="uid://5ix2onyd1kgc" path="res://scenes/cursor_inventory.tscn" id="3_0ijgf"]
[ext_resource type="Resource" uid="uid://bm87wrx675o1n" path="res://entities/person/resources/iipaa.tres" id="3_epfvx"]
[ext_resource type="Resource" uid="uid://ba63f4vc64ly0" path="res://entities/person/resources/noodle.tres" id="4_ckrcg"]
[ext_resource type="Resource" uid="uid://c1eqt8jd6qk6j" path="res://entities/person/resources/phiz.tres" id="5_1ybip"]
[ext_resource type="Resource" uid="uid://bbku6ryqpynom" path="res://entities/person/resources/poko.tres" id="6_0arob"]
[ext_resource type="Resource" uid="uid://3dx688x7cu2c" path="res://entities/person/resources/unzt.tres" id="7_jsre1"]
[ext_resource type="Resource" uid="uid://c7og8fvqx6n0i" path="res://entities/person/resources/vas_hipe.tres" id="8_40b10"]
[ext_resource type="Resource" uid="uid://bd16diywec47b" path="res://entities/equipment/resources/armored-carrier.tres" id="9_a4lx6"]
[ext_resource type="PackedScene" uid="uid://bqqxm8lqy7c7k" path="res://scenes/property_icons.tscn" id="9_cirwj"]
[ext_resource type="Resource" uid="uid://bbjswqf26dixa" path="res://entities/equipment/resources/blaster.tres" id="10_jmbua"]
[ext_resource type="PackedScene" uid="uid://ebeqkgor3adm" path="res://scenes/entity_tooltip.tscn" id="10_w2ymd"]
[ext_resource type="Resource" uid="uid://dnwgqik2fxms4" path="res://entities/equipment/resources/buggy.tres" id="11_vvahf"]
[ext_resource type="Resource" uid="uid://b3t5yycaiukyy" path="res://entities/equipment/resources/cannon.tres" id="12_q062q"]
[ext_resource type="Resource" uid="uid://cb1nf52yp1xja" path="res://entities/equipment/resources/cargo-crate.tres" id="13_0dnsp"]
[ext_resource type="Resource" uid="uid://ddf7x2iqpyiye" path="res://entities/equipment/resources/crusher.tres" id="14_pjqha"]
[ext_resource type="Resource" uid="uid://djb7ovijgd73r" path="res://entities/equipment/resources/digital-lure.tres" id="15_j4ha0"]
[ext_resource type="Resource" uid="uid://c2co3f0y5eq0x" path="res://entities/equipment/resources/double-blaster.tres" id="16_qwho5"]
[ext_resource type="Resource" uid="uid://ca6xuptibiohj" path="res://entities/equipment/resources/ducky.tres" id="17_kah22"]
[ext_resource type="Resource" uid="uid://wjqlqogdseuw" path="res://entities/equipment/resources/emf-detector.tres" id="18_2rqku"]
[ext_resource type="Resource" uid="uid://dhee2gifcuwe3" path="res://entities/equipment/resources/fluid-canister.tres" id="19_dc0vr"]
[ext_resource type="Resource" uid="uid://cbs2ton7qebo0" path="res://entities/equipment/resources/jeep.tres" id="20_fq5e3"]
[ext_resource type="Resource" uid="uid://nrlokvlwc4ij" path="res://entities/equipment/resources/large-transport.tres" id="21_ef4gy"]
[ext_resource type="PackedScene" uid="uid://boqkkx2coehi3" path="res://scenes/route_planner.tscn" id="22_3vby6"]
[ext_resource type="PackedScene" uid="uid://cns5gj0nnlevl" path="res://scenes/simple_text_input_modal.tscn" id="23_66q2l"]
[ext_resource type="PackedScene" uid="uid://braxo1y2qe6x0" path="res://scenes/caravan_editor.tscn" id="28_66q2l"]
[ext_resource type="StyleBox" uid="uid://cuviy1uemkit0" path="res://themes/panel_bg.tres" id="29_sv35f"]

[node name="Scratch" type="Control" node_paths=PackedStringArray("property_icons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbcf5")
property_icons = NodePath("PropertyIcons")
example_resources = Array[Resource]([ExtResource("2_eikx3"), ExtResource("3_epfvx"), ExtResource("4_ckrcg"), ExtResource("5_1ybip"), ExtResource("6_0arob"), ExtResource("7_jsre1"), ExtResource("8_40b10"), ExtResource("9_a4lx6"), ExtResource("10_jmbua"), ExtResource("11_vvahf"), ExtResource("12_q062q"), ExtResource("13_0dnsp"), ExtResource("14_pjqha"), ExtResource("15_j4ha0"), ExtResource("16_qwho5"), ExtResource("17_kah22"), ExtResource("18_2rqku"), ExtResource("19_dc0vr"), ExtResource("20_fq5e3"), ExtResource("21_ef4gy")])
editor_scn = ExtResource("28_66q2l")
simple_text_input_modal = ExtResource("23_66q2l")

[node name="RoutePlanner" parent="." instance=ExtResource("22_3vby6")]
unique_name_in_owner = true
position = Vector2(444, 110)

[node name="PropertyIcons" parent="." instance=ExtResource("9_cirwj")]
unique_name_in_owner = true
visible = false

[node name="cursor" parent="." instance=ExtResource("3_0ijgf")]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_bottom = 50.0

[node name="inventory" parent="." instance=ExtResource("1_ufdn1")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_left = 14.0
offset_top = -182.0
offset_right = 699.0
offset_bottom = 102.0
grow_horizontal = 1
grow_vertical = 0
scale = Vector2(0.56, 0.56)
mouse_filter = 1
num_columns = 10
num_slots = 20

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 1295.0
offset_bottom = 46.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("29_sv35f")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 419.0
offset_top = 3.0
offset_right = 1275.0
offset_bottom = 43.0

[node name="NewCaravanButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Caravan"

[node name="RemoveCaravanButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove Caravan"

[node name="EditRouteButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit Route"

[node name="CheckRouteButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Check Route"

[node name="Editors" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 414.0
offset_bottom = 454.0
theme_override_styles/panel = ExtResource("29_sv35f")

[node name="BigNewCaravanButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 54.0
offset_top = 144.0
offset_right = 356.0
offset_bottom = 206.0
text = "Add Caravan"

[node name="SmallModalSpawnPos" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(459, 165)

[node name="Tooltip" parent="." node_paths=PackedStringArray("property_icons") instance=ExtResource("10_w2ymd")]
unique_name_in_owner = true
visible = false
layout_mode = 0
property_icons = NodePath("../PropertyIcons")

[connection signal="resource_clicked" from="inventory" to="cursor" method="on_grid_item_clicked"]
[connection signal="pressed" from="Panel/HBoxContainer/NewCaravanButton" to="." method="_on_new_caravan_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/RemoveCaravanButton" to="." method="_on_remove_caravan_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/EditRouteButton" to="." method="_on_edit_route_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/CheckRouteButton" to="." method="_on_check_route_button_pressed"]
[connection signal="tab_selected" from="Editors" to="." method="_on_editors_tab_selected"]
[connection signal="pressed" from="BigNewCaravanButton" to="." method="_on_new_caravan_button_pressed"]
